[package]
name = "hook"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["staticlib"]

[dependencies]
cty = "0.2.1"
panic-halt = "0.2.0"

[profile.dev]
panic = "abort"

[build-dependencies]
bindgen = "0.59.1"
cbindgen = "0.19.0"